syntax = "proto3"; //proto 문법 버전 정의

package com.example.demo;
option java_package = "com.example.demo"; //java 패키지를 명시적으로 지정

service PostService {
  rpc AddComment (AddCommentRequest) returns (AddCommentResponse);
}

message AddCommentRequest {
  int64 post_id = 1;
  string content = 2;
}

message AddCommentResponse {}